--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -11,28 +11,28 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          - pip install -r requirements.txt
+          pip install -r requirements.txt
 
           # Generate data #TODO: Setup DVC Remote
 
-          - python src/get_data.py --data_location=data/raw
+          python src/get_data.py --data_location=data/raw
 
           # Run ML workflow as pipeline
-          - dvc repro
+          dvc repro
 
           # Use DVC metrics diff to compare metrics to master
-          - git fetch --prune
-          - echo "## Metrics" >> report.md
-          - dvc metrics diff --show-md master >> report.md
+          git fetch --prune
+          echo "## Metrics" >> report.md
+          dvc metrics diff --show-md master >> report.md
 
           # Add figure to report
-          - echo "## Plots" >> report.md
+          echo "## Plots" >> report.md
 
-          - dvc plots diff --target prc.json --show-vega master > vega.json
-          - vl2png vega.json -s 1.3 | cml-publish --md >> report.md
+          dvc plots diff --target prc.json --show-vega master > vega.json
+          vl2png vega.json -s 1.3 | cml-publish --md >> report.md
 
-          - dvc plots diff --target prc.json --show-vega master > vega.json
+          dvc plots diff --target prc.json --show-vega master > vega.json
 
 
           # Add report to PR
-          - cml-send-comment report.md
+          cml-send-comment report.md
