--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: iterative/setup-dvc@v1
+        with:
+          version: '1.0.1'
       - name: Train model
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
