remove arg parsing

--- a/params.yaml
+++ b/params.yaml
@@ -1,3 +1,8 @@
+data_location:
+  raw_data_location: data/raw
+  test_data_location: data/test
+  train_data_location: data/train
+
 split_data:
   test_size: 0.20
   random_state: 20170428
